test(ADA8-utilidades): :white_check_mark: corrige test para que use rutas `Class.getResource()`