@@ -1,7 +1,11 @@
 package com.ada8;
 
+import java.io.FileInputStream;
 import java.io.IOException;
+import java.net.URISyntaxException;
+import java.net.URL;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 
 import org.junit.Test;
@@ -17,11 +21,14 @@ public class AppTest {
      * Rigorous Test :-)
      * 
      * @throws IOException
+     * @throws URISyntaxException 
      */
     @Test
-    public void MensajeMapperTest() throws IOException {
-        String content = Files.readString(Paths.get(
-                "C:/Users/rodri/Desktop/software-architecture/tareas/ADA8/utils/src/test/java/com/ada8/jsonTest.json"));
+    public void MensajeMapperTest() throws IOException, URISyntaxException {
+
+        var filePath = MensajeMapeador.class.getResource("/jsonTest.json").toURI();
+        
+        String content = Files.readString(Path.of(filePath));
 
         Mensaje mensaje = MensajeMapeador.deJsonAObjeto(content);
 
